Completed interview tasks: Dashboard and Users table with filtering

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,6 +1,7 @@
 {
+  "serverURL": "http://localhost:50000",
   "dashboard": {
-    "title": "Dashboard",
+    "title": "Home",
     "description": "Welcome to your dashboard!"
   },
   "usersList": {
